@@ -811,3 +811,86 @@ $lang["Album access rights updated"]="Album-Zugriffsrechte aktualisiert";
 $lang["Description"]="Beschreibung";
 $lang["Current backup operations"]="Aktuelle Sicherungsvorgänge";
 
+$lang['weekday-4'] = 'Donnerstag';
+$lang['backup-label-target-path'] = 'Ziel Verzeichnis';
+$lang['backup-edit-dialog-step4-title'] = 'Backup Plan (Schritt 3 von 4)';
+$lang['backup-label-schedule-disabled'] = 'Gesperrt (manuell starten durch Klick auf "Starten")';
+$lang['backup-create-dialog-step2-title'] = 'Wählen Sie aus, was gesichert werden soll (Schritt 2 von 5)';
+$lang['backup-selection-music'] = 'Musik (/home/storage/music)';
+$lang['weekday-3'] = 'Mittwoch';
+$lang['backup-label-target-server-password'] = 'Password des Ziel Servers';
+$lang['backup-label-target-server-username'] = 'Username des Ziel Servers';
+$lang['Step 3/3: Network setup'] = 'Schritt 3 von 3: Netzwerk Setup';
+$lang['backup-label-schedule-weekly-day'] = 'Wöchentlich';
+$lang['backup-title-schedule-daily-hour'] = 'Tageszeit';
+$lang['backup-selection-custom-browse'] = 'Durchsuchen';
+$lang['backup-selection-video'] = 'Videos (/home/storage/video)';
+$lang['backup-edit-dialog-step5-title'] = 'Sicherheit (Schritt 4 von 4)';
+$lang['backup-label-schedule-hourly'] = 'Stündlich';
+$lang['users-system-default-lang'] = 'System Vorgabe';
+$lang['backup-label-schedule-monthly-hour'] = 'um';
+$lang['backup-edit-dialog-step3-title'] = 'Ziel der Datensicherung (Schritt 2 von 4)';
+$lang['weekday-1'] = 'Montag';
+$lang['backup-label-schedule-monthly-day'] = 'Monatlich am';
+$lang['backup-create-dialog-step1-title'] = 'Wählen Sie einen Namen für die geplante Datensicherung (Schritt 1 von 5)';
+$lang['backup-label-target-protocol'] = 'Protokoll';
+$lang['backup-title-target-device'] = 'Ziel der Datensicherung';
+$lang['backup-title-schedule-weekly-hour'] = 'Tageszeit';
+$lang['backup-label-target-server-hostname'] = 'Ziel Server';
+$lang['backup-label-security-enable'] = 'Verschlüsselung der Datensicherung um die Sicherheit zu erhöhen';
+$lang['wizard-msg2'] = 'wizard-msg2';
+$lang['backup-label-name'] = 'Name der Planung';
+$lang['backup-selection-storage'] = 'Storage (/home/storage)';
+$lang['backup-label-restore-newdir'] = 'Datenwiederherstellung in einem anderen Verzeichniss zur manuellen Untersuchung (in Bezug auf /home/admin)';
+$lang['backup-edit-dialog-step2-title'] = 'Zu sichernde Daten (Schritt 1 von 4)';
+$lang['backup-create-dialog-step5-title'] = 'Sicherheit (Schritt 5 von 5)';
+$lang['backup-label-schedule-daily-hour'] = 'Täglich um';
+$lang['backup-label-security-password2'] = 'Password wiederholen';
+$lang['backup-create-dialog-step4-title'] = 'wahl der Backup Planung (Schritt 4 von 5)';
+$lang['weekday-7'] = 'Sonntag';
+$lang['backup-create-dialog-title'] = 'Neues Backup erstellen';
+$lang['backup-title-schedule-weekly-day'] = 'Wochentag';
+$lang['backup-selection-photo'] = 'Fotos (/home/storage/photos)';
+$lang['backup-selection-email'] = 'E-Mmail (/home/&lt;all users&gt;/Mail)';
+$lang['backup-edit-dialog-title'] = 'Geplante Datensicherung ändern';
+$lang['backup-title-schedule-monthly-day'] = 'Tag im Monat';
+$lang['weekday-2'] = 'Dienstag';
+$lang['Step 2/3: Create users'] = 'Schritt 2 von 3: Anwender erstellen';
+$lang['title_backup'] = 'Backup / Datensicherung';
+$lang['backup-job-add-button-label'] = 'Neues Backup erstellen';
+$lang['backup-create-dialog-step3-title'] = 'Wählen Sie das Ziel der Datensicherung (Schritt 3 von 5)';
+$lang['backup-note-schedule-timeline'] = 'Je länger Sie die Zeitlinie wählen, desto mehr Speicherplatz wird auf dem Datenspeicher benötigt';
+$lang['weekday-6'] = 'Samstag';
+$lang['backup-label-target-device'] = 'Ziel';
+$lang['backup-selection-data'] = 'Daten (/home/&lt;all users&gt;)';
+$lang['backup-label-restore-missing'] = 'Wiederherstellen von Daten, die auf dem B3 nicht mehr verfügbar sind ohne existierende Daten zu überschreiben"';
+$lang['backup-label-schedule-weekly-hour'] = 'um';
+$lang['mail_server_userpwdmissing'] = 'Password des Mail Servers fehlt';
+$lang['weekday-5'] = 'Freitag';
+$lang['backup-title-schedule-monthly-hour'] = 'Tageszeit';
+$lang['backup-label-security-password'] = 'Password';
+$lang['Remote access through other router'] = 'Fernzugriff über andere Router';
+$lang['Contact'] = 'Verbindung';
+$lang['For more information'] = 'Für weitergehende Informationen';
+$lang['a decade'] = 'eine Dekade';
+$lang['User contributed languages'] = 'Nutzerspezifische Sprachen';
+$lang['half a year'] = 'Halbjährlich';
+$lang['a day'] = 'Täglich';
+$lang['a year'] = 'Jährlich';
+$lang['backup-title-protocol'] = 'Backup-Title-Protokoll';
+$lang['Only A-Z,a-z,0-9 and \"-\" allowed'] = 'Nur A-Z,a-z,0-9 und \"-\" sind zugelassen';
+$lang['a month'] = 'Monatlich';
+$lang['a week'] = 'Wöchendlich';
+$lang['Date'] = 'Datum';
+$lang['Attached printers'] = 'Angeschlossene Drucker';
+$lang['Manual'] = 'Handbuch';
+$lang['Support'] = 'Support';
+$lang['Schedule'] = 'Plan';
+$lang['Default system language'] = 'Vorgegeben System Sprache';
+
+$lang['backup-label-schedule-timeline'] = 'Keep timeline length of';
+$lang['backup-jobs-title'] = 'List of backup job specifications for this machine';
+$lang['backup-label-restore-overwrite'] = 'Revert the content of the files on the B3 to what is given in this backup';
+$lang['backup-job-runs-title'] = 'List of executed runs for selected job specification above';
+$lang['backup-title-schedule-timeline'] = 'Age of timeline';
+$lang['backup-selection-custom'] = 'custom selection';
