@@ -107,6 +107,29 @@ messages = {
 	"album-users-edit-dialog-delete-header":"Fotoalbum-Viewer löschen",
 	"album-users-edit-dialog-delete-message":"Diesen Fotoalbum-Viewer löschen?",
 	"album-users-delete-success-message":"Viewer gelöscht",
-	"album-users-add-success-message":"Viewer hinzugefügt",
-	"album-users-edit-success-message":"Viewer aktualisiert"
+    "album-users-add-success-message":"Viewer hinzugefügt",
+    "album-users-edit-success-message":"Viewer aktualisiert",
+
+    "next" : "Weiter",
+    "backup-job-failed-alert-title" : "Backup abgebrochen",
+    "backup-create-button-finish" : "Fertigstellen",
+    "backup-job-failed-why-label" : "Warum?",
+    "backup-job-dialog-run-header" : "Backup starten",
+    "backup-restore-overwrite-confirm-message" : "Sind Sie sicher, dass Sie die Daten wiederherstellen wollen? Dies wird die aktuellen Daten mit denen des Backups überschreiben",
+    "backup-restore-overwrite-confirm-header" : "Wiederherstellen bestätigen",
+    "backup-job-run-success-message" : "Die Ausführung des Backups wurde entsprechend terminiert.",
+    "backup-job-remove-success-message" : "Die Ausführung des Backups wurde verworfen",
+    "backup-job-run-now-button-label" : "Starten",
+    "backup-job-dialog-remove-message" : "Sind Sie sicher, dass Sie die Ausführung dieses Backups entfernen wollen?",
+    "backup-job-remove-button-label" : "Entfernen",
+    "backup-job-dialog-remove-header" : "Ausführung des Backups entfernt",
+    "backup-job-dialog-remove-button-label" : "Yea",
+    "backup-dialog-restore-title" : "Daten des Backups wiederherstellen",
+    "backup-dialog-restore-label" : "Ausgewählte Daten und Ordner wiederherstellen",
+    "back" : "Zurück",
+    "backup-edit-button-finish" : "Fertig",
+    "backup-job-restore-button-label" : "Wiederherstellen",
+    "backup-job-dialog-run-button-label" : "Yea",
+    "backup-job-dialog-run-message" : "Sind Sie sicher, dass Sie das Backup nun starten wollen?",
+    "backup-job-failed-label" : "Fehler"
 }
