@@ -1,3 +1,9 @@
+bubba-frontend (2.1.43) vincent hugo; urgency=low
+
+  * Updating german translation
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 10:37:55 +0200
+
 bubba-frontend (2.1.42) vincent hugo; urgency=low
 
   * Syntax error in php file, Fales → false
